M5_Advanced_Concepts/homework/init-cnt-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-cnt-pod
  labels:
    app: init-cnt-pod
spec:
  containers:
  - name: app-container
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: data
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: svc-init
  labels:
    app: svc-init
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: init-cnt-pod
