M5_Advanced_Concepts/homework/pod-svc-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: pod1
spec:
  containers:
  - image: shekeriev/k8s-environ
    name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
  - port: 443
    protocol: TCP
  selector:
    app: pod1
