M5_Advanced_Concepts/homework/pod-svc-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: pod2
spec:
  containers:
  - image: shekeriev/k8s-environ
    name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
  - port: 443
    protocol: TCP
  selector:
    app: pod2
